<?xml version="1.0"?>
<package format="2">
  <name>node_function_monitor</name>
  <version>0.0.0</version>
  <description>The node_function_monitor package</description>

  <maintainer email="e300@todo.todo">e300</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>

  <build_export_depend>std_msgs</build_export_depend>

  <exec_depend>message_runtime</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>diagnostic_msgs</exec_depend>

</package>
